# loopy

./: .gitignore  .prettierignore  CLAUDE.md  CONTEXT.md  README.md  SPEC.md  eslint.config.js  loopy.yml  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/agents/: ui-stitch-screen.md
.github/workflows/: publish.yml
.harn/adrs/: config.json
.harn/design/: LOGO-SPEC.md
apps/menubar/: CLAUDE.md  DESIGN.md  PRODUCT.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/menubar/src-tauri/: CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json
apps/menubar/src-tauri/capabilities/: default.json
apps/menubar/src-tauri/icons/: icon.icns
apps/menubar/src-tauri/src/: config.rs  main.rs  panel.rs  project_fs.rs  sidecar.rs  telemetry.rs
docs/: MIGRATION.md
docs/adrs/: 0001-unificar-acao-em-falha-em-on-fail.md  0002-estender-on-fail-com-goto-adicionar-on-success-e-max-step-visits.md  0003-metricas-de-execucao-contrato-aditivo-best-effort-acp.md  0004-concorrencia-n-dag-de-tasks-secao-critica-e-skip-transitivo.md  0005-tui-de-execucao-dashboard-ink-emit-seam-e-view-pura.md  0006-multi-agente-acp.md  0007-transport-ndjson-duplex-native-ui.md  0008-capabilities-de-agente-por-descoberta.md  0009-concorrencia-derivada-do-dag.md  0010-catalogo-de-agentes-argv-por-preset.md  0011-telemetria-sqlite-insert-only-e-granularidade-por-tentativa.md  README.md  template.md
docs/how-to/: README.md  configurar-projeto-alvo.md  ligar-telemetria-e-anotar-vereditos.md  recuperar-task-escalada.md  usar-multiplos-agentes.md
docs/reference/: README.md  backlog.md  cli.md  configuration.md  interpolation.md
docs/tutorials/: README.md  meu-primeiro-loop.md  (+1 more)
examples/: loopy.yml
scripts/: cleanup-worktree.sh
spikes/: README.md  _acp-probe.ts  acp-claude-capabilities.ts  acp-codex-capabilities.ts  acp-opencode-capabilities.ts  acp-opencode-clear.ts  acp-opencode-effort.ts
src/: index.ts  types.ts
tasks/: plan.md  todo.md
tests/: README.md
(+547 files in other folders)
